# RPL

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  appendix-00-appendices.html  appendix-01-syntax.html  appendix-02-error-codes.html  appendix-03-patterns.html  ch01-00-getting-started-with-rpl.html  ch01-01-installation.html  ch01-02-hello-world.html  ch01-03-why-pattern-language.html  ch01-04-cli-tour.html  ch02-00-language-fundamentals.html  ch02-01-syntax-overview.html  ch02-02-meta-variables-placeholders.html  ch02-03-pattern-blocks.html  ch02-04-constraints-predicates.html  ch02-05-match-output.html  ch03-00-semantics-model.html  ch03-01-mir-basics.html  ch03-02-cfg-ddg.html  ch03-03-semantic-equivalence.html  ch03-04-inline-mir.html  ch04-00-case-studies.html  ch04-01-memory-safety.html  ch04-02-undefined-behavior.html  ch04-03-open-source.html  foreword.html  index.html  libcve_2018_20992.rlib  libtest.rlib  print.html  rust-toolchain  rustfmt.toml  searchindex.js  toc.html  toc.js
crates/rpl_context/: Cargo.toml
crates/rpl_context/src/: arena.rs  context.rs  cvt_prim_ty.rs  lib.rs
crates/rpl_context/src/pat/: item.rs  mod.rs  pretty.rs  ty.rs  utils.rs
crates/rpl_context_pest/: Cargo.toml
crates/rpl_context_pest/src/: context.rs  lib.rs
crates/rpl_context_pest/src/pat/: item.rs  mod.rs  pretty.rs  ty.rs  utils.rs
crates/rpl_driver/: Cargo.toml  messages.en.ftl
crates/rpl_driver/src/: lib.rs
crates/rpl_graphviz/: Cargo.toml
crates/rpl_graphviz/graphs/: cve_2018_21000_pat_cfg.dot  cve_2018_21000_pat_ddg.dot  cve_2020_25016_pat_ddg.dot  cve_2020_35892_3_pat_ddg.dot  cve_2021_29941_2_pat_cfg.dot  cve_2021_29941_2_pat_ddg.dot
crates/rpl_graphviz/src/: graph.rs  lib.rs
crates/rpl_graphviz/tests/: test.rs
crates/rpl_graphviz/tests/graphs/: control_flow_pat_cfg.dot  control_flow_pat_ddg.dot  cve_2018_21000_const_pat_cfg.dot  cve_2018_21000_const_pat_ddg.dot  cve_2018_21000_pat_cfg.dot  cve_2018_21000_pat_ddg.dot  cve_2020_35877_pat_cfg.dot  cve_2020_35877_pat_ddg.dot  cve_2020_35892_3_offset_pat_cfg.dot  cve_2020_35892_3_offset_pat_ddg.dot  cve_2020_35892_3_pat_cfg.dot  cve_2020_35892_3_pat_ddg.dot  cve_2021_27376_pat_cfg.dot  cve_2021_27376_pat_ddg.dot  cve_2021_29941_2_pat_cfg.dot  cve_2021_29941_2_pat_ddg.dot  cve_2021_29941_pat_cfg.dot  cve_2021_29941_pat_ddg.dot  cve_2021_29941_uninitialized_slice_pat_cfg.dot  cve_2021_29941_uninitialized_slice_pat_ddg.dot  pattern_drop_unit_value_pat_cfg.dot  pattern_drop_unit_value_pat_ddg.dot  unsafe_cell_alias_pat_cfg.dot  unsafe_cell_alias_pat_ddg.dot
crates/rpl_interface/: Cargo.toml
crates/rpl_interface/src/: callbacks.rs  interface.rs  lib.rs  passes.rs
crates/rpl_macros/: Cargo.toml
crates/rpl_macros/src/: lib.rs
crates/rpl_match/: Cargo.toml
crates/rpl_match/src/: adt.rs  counted.rs  fns.rs  lib.rs  place.rs  resolve.rs  ty.rs
crates/rpl_meta_pest/: Cargo.toml
crates/rpl_meta_pest/examples/: meta-collector.rs
crates/rpl_meta_pest/src/: arena.rs  check.rs  cli.rs  context.rs  error.rs  idx.rs  lib.rs  meta.rs  symbol_table.rs  utils.rs
crates/rpl_mir/: Cargo.toml
crates/rpl_mir/src/: lib.rs  resolve.rs
crates/rpl_mir/src/graph/: mir.rs  mod.rs  pat.rs
crates/rpl_mir/src/matches/: mod.rs
crates/rpl_mir/src/pattern/: arena.rs  matching.rs  mod.rs  pretty.rs  visitor.rs
crates/rpl_mir/src/predicate/: a.rs  mod.rs
crates/rpl_mir/tests/: test_cfg.rs  test_ddg.rs  tests.rs
crates/rpl_mir_expand/: Cargo.toml
crates/rpl_mir_expand/src/: check.rs  expand.rs  lib.rs  parse.rs  symbol_table.rs  tests.rs
crates/rpl_mir_graph/: Cargo.toml
crates/rpl_mir_graph/src/: graph.rs  lib.rs  mir.rs  pattern.rs  rwstate.rs
crates/rpl_mir_graph/tests/: test_patterns.rs
crates/rpl_mir_pattern/: Cargo.toml
crates/rpl_mir_pattern/expand/: Cargo.toml
crates/rpl_mir_pattern/expand/src/: expand.rs  lib.rs  parse.rs  symbol_table.rs  tests.rs
crates/rpl_mir_pattern/src/: lib.rs
crates/rpl_mir_pattern/src/pattern/: mod.rs  pretty.rs  visitor.rs
crates/rpl_mir_pattern/syntax/: Cargo.toml
crates/rpl_mir_pattern/syntax/src/: auto_derive.rs  lib.rs  parse.rs  tests.rs  to_tokens.rs
crates/rpl_mir_syntax/: Cargo.toml
crates/rpl_mir_syntax/src/: lib.rs  parse.rs  tests.rs  to_tokens.rs
crates/rpl_mir_transform/: Cargo.toml
crates/rpl_mir_transform/src/: lib.rs  unify_comparison.rs
crates/rpl_parser/: Cargo.toml  build.rs
crates/rpl_parser/src/: error.rs  lib.rs  parser.rs  position.rs  span.rs
crates/rpl_parser/src/grammar/: RPL.pest
crates/rpl_parser/src/tests/: test.rs
crates/rpl_parser/tests/: test.rs
crates/rpl_pat_expand/: Cargo.toml
crates/rpl_pat_expand/src/: check.rs  expand.rs  lib.rs  symbol_table.rs  tests.rs
crates/rpl_pat_syntax/: Cargo.toml
crates/rpl_pat_syntax/src/: lib.rs  parse.rs  tests.rs
crates/rpl_patterns/: Cargo.toml  messages.en.ftl
crates/rpl_patterns/src/: cve_2018_20992.rs  cve_2018_20996.rs  cve_2018_21000.rs  cve_2018_21000_inlined.rs  cve_2019_15548.rs  cve_2019_15548_2.rs  cve_2019_16138.rs  cve_2020_25016.rs  cve_2020_35873.rs  cve_2020_35881.rs  cve_2020_35888.rs  cve_2020_35892_3.rs  cve_2020_35898_9.rs  cve_2021_25904.rs  cve_2021_27376.rs  cve_2021_29941_2.rs  errors.rs  lib.rs  lints.rs  opts.rs
crates/rpl_patterns/src/inline/: alloc_unchecked.rs  cve_2018_20992.rs  cve_2018_21000.rs  cve_2019_15548.rs  cve_2019_16138.rs  cve_2020_25016.rs  cve_2020_35862.rs  cve_2020_35873.rs  cve_2020_35877.rs  cve_2020_35881.rs  cve_2020_35888.rs  cve_2020_35892_3.rs  cve_2020_35898_9.rs  cve_2020_35901.rs  cve_2020_35901_2.rs  cve_2020_35907.rs  cve_2021_25904.rs  cve_2021_25905.rs  cve_2021_29941_2.rs  cve_2024_27284.rs  mod.rs  std_mem_transmute.rs  transmute_int_to_ptr.rs  transmute_type_to_bool.rs
crates/rpl_patterns/src/loose/: cve_2019_16138.rs
crates/rpl_patterns/src/normal/: alloc_unchecked.rs  cve_2018_20992.rs  cve_2018_21000.rs  cve_2019_15548.rs  cve_2019_16138.rs  cve_2020_35860.rs  mod.rs  (+7 more)
crates/rpl_utils/: Cargo.toml  messages.en.ftl
crates/rpl_utils/src/: cli.rs  errors.rs  lib.rs  utils.rs
(+367 files in other folders)
