[workspace]
members = [
    "crates/*",
    "./"
, "tests/ui/cve_2024_27284"]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Rust Pattern Language"
publish = false
license = "MIT OR Apache-2.0"
keywords = ["Bug detection"]
repository = "https://github.com/stuuupidcat/RPL"

[workspace.dependencies]
rpl_context = { path = "./crates/rpl_context" }
rpl_driver = { path = "./crates/rpl_driver" }
rpl_graphviz = { path = "./crates/rpl_graphviz" }
rpl_interface = { path = "./crates/rpl_interface" }
rpl_macros = { path = "./crates/rpl_macros" }
rpl_mir = { path = "./crates/rpl_mir" }
rpl_mir_expand = { path = "./crates/rpl_mir_expand" }
rpl_mir_graph = { path = "./crates/rpl_mir_graph" }
rpl_mir_syntax = { path = "./crates/rpl_mir_syntax" }
rpl_patterns = { path = "./crates/rpl_patterns" }
rpl_utils = { path = "./crates/rpl_utils" }
rustc_tools_util = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
arrayvec = { version = "0.7", default-features = false }
itertools = "0.12"
rustc-semver = "1.1"
walkdir = "2.3"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
tracing = "0.1.28"
thiserror = "1.0"
pretty_assertions = "1.4"
bitflags = "2.5"
gsgdt = "0.1.2"
syn_derive = "0.2"
derive_more = { version = "1.0", features = ["from", "into_iterator", "deref", "display"] }

[package]
name = "rpl"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cargo-rpl"
test = false
path = "src/main.rs"

[[bin]]
name = "rpl-driver"
path = "src/driver.rs"

[dependencies]
rpl_interface.workspace = true
rustc_tools_util.workspace = true
color-print = "0.3.4"
anstream = "0.6.0"

[dev-dependencies]
ui_test = "0.22.2"
tester = "0.9"
regex = "1.5"
toml.workspace = true
walkdir.workspace = true
# This is used by the `collect-metadata` alias.
filetime = "0.2"
itertools = "0.12"

# UI test dependencies
if_chain = "1.0"
quote.workspace = true
serde.workspace = true
syn = { workspace = true, features = ["full"] }
futures = "0.3"
parking_lot = "0.12"
tracing.workspace = true
log = "0.4"
libc = "0.2"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true

[[test]]
name = "compile-test"
harness = false
