[workspace]
members = [
    "crates/*",
    "./"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Rust Pattern Language"
publish = false
license = "MIT OR Apache-2.0"
keywords = ["Bug detection"]
repository = "https://github.com/stuuupidcat/RPL"

[workspace.dependencies]
rpl_context = { path = "./crates/rpl_context" }
rpl_driver = { path = "./crates/rpl_driver" }
rpl_parser = { path = "./crates/rpl_parser" }
rpl_graphviz = { path = "./crates/rpl_graphviz" }
rpl_interface = { path = "./crates/rpl_interface" }
rpl_macros = { path = "./crates/rpl_macros" }
rpl_match = { path = "./crates/rpl_match" }
rpl_mir = { path = "./crates/rpl_mir" }
rpl_mir_graph = { path = "./crates/rpl_mir_graph" }
rpl_mir_transform = { path = "./crates/rpl_mir_transform" }
rpl_pat_expand = { path = "./crates/rpl_pat_expand" }
rpl_pat_syntax = { path = "./crates/rpl_pat_syntax" }
rpl_patterns = { path = "./crates/rpl_patterns" }
rpl_utils = { path = "./crates/rpl_utils" }
rpl_meta_pest = { path = "./crates/rpl_meta_pest" }
rustc_tools_util = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = "0.7.3"
arrayvec = { version = "0.7", default-features = false }
itertools = "0.12"
rustc-semver = "1.1"
walkdir = "2.3"
quote = "1.0.38"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
tracing = "0.1.28"
thiserror = "1.0"
pretty_assertions = "1.4"
gsgdt = "0.1.2"
syn_derive = "0.2"
derive_more = { version = "1.0", features = ["from", "into_iterator", "debug", "deref", "display"] }
libc = "0.2"
byte-slice-cast = "1.0.0"
num-derive = "0.3"
num-rational = "0.3.0"
num-traits = "0.2.8"
pest = { version = "2.7.10", features = ["std"] }
pest_generator = { version = "2.7.10", features = ["grammar-extras"] }
pest_derive = { version = "2.7.10", features = ["grammar-extras"] }
pest_typed = { version = "0.17.1", features = ["std"] }
pest_typed_generator = { version = "0.17.1", features = ["grammar-extras"] }
pest_typed_derive = { version = "0.17.1", features = ["grammar-extras"] }
colored = "3.0.0"
error-enum = "0.4.1"
schemars = "0.8.21"
memmap = "0.5.0"
pin-project = "1.0"
radium = "0.3"
tokio = "1.43"
tokio-util = { version = "0.2", features = ["codec"] }
bytes = "1.10"
# cassandra-cpp-sys = "1.1.1"

[package]
name = "rpl"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cargo-rpl"
test = false
path = "src/main.rs"

[[bin]]
name = "rpl-driver"
path = "src/driver.rs"

[dependencies]
rpl_interface.workspace = true
rpl_meta_pest.workspace = true
rustc_tools_util.workspace = true
color-print = "0.3.4"
anstream = "0.6.0"

[dev-dependencies]
ui_test = "0.29.2"
tester = "0.9"
regex = "1.5"
toml.workspace = true
walkdir.workspace = true
# This is used by the `collect-metadata` alias.
filetime = "0.2"
itertools = "0.12"

# UI test dependencies
if_chain = "1.0"
quote.workspace = true
serde.workspace = true
syn = { workspace = true, features = ["full"] }
futures = "0.3"
parking_lot = "0.12"
tracing.workspace = true
log = "0.4"
libc.workspace = true
scoped_threadpool = "0.1"
serde_json.workspace = true
byte-slice-cast.workspace = true
num-derive.workspace = true
num-rational.workspace = true
num-traits.workspace = true
thiserror.workspace = true
memmap.workspace = true
pin-project.workspace = true
radium.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
# cassandra-cpp-sys.workspace = true

[build-dependencies]
rustc_tools_util.workspace = true

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true

[[test]]
name = "compile-test"
harness = false
