[package]
name = "rpl_context_pest"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
rpl_meta_pest.workspace = true
rpl_parser.workspace = true

[features]

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
