[package]
name = "rpl_interface"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
rpl_context.workspace = true
rpl_driver.workspace = true
rpl_meta_pest.workspace = true
rpl_patterns.workspace = true
rpl_utils.workspace = true

[features]

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
