[package]
name = "rpl_macros"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
rpl_pat_expand.workspace = true
rpl_pat_syntax.workspace = true
syn.workspace = true
quote.workspace = true

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
