[package]
name = "rpl_match"
version.workspace = true
edition.workspace = true
description.workspace = true
publish.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
rpl_context.workspace = true

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
