[package]
name = "rpl_mir"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
rpl_context.workspace = true
rpl_match.workspace = true
rpl_mir_graph.workspace = true
syn.workspace = true

[dev-dependencies]
rpl_macros.workspace = true
pretty_assertions.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[features]

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
