cargo-features = ["edition2024"]

[package]
name = "rpl_mir_graph"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition = "2024"

[dependencies]

[dev-dependencies]
rpl_macros.workspace = true
pretty_assertions.workspace = true
proc-macro2.workspace = true
quote.workspace = true

[features]

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
