[package]
name = "rpl_mir_syntax"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
thiserror.workspace = true
syn_derive.workspace = true
derive_more.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]