[package]
name = "rpl_mir_transform"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true

[dev-dependencies]

[features]

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
