[package]
name = "rpl_pat_expand"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
rpl_pat_syntax.workspace = true
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
thiserror.workspace = true
derive_more.workspace = true
syn_derive.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
